--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .loader {
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid #3498db;
+    border: 16px solid #ECECEC;
+    border-top: 16px solid #492828;
     border-radius: 50%;
     width: 120px;
     height: 120px;
@@ -11,4 +11,21 @@
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+body {
+    background-color: #ECECEC;
+    color: #84934A;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.avatar {
+    animation: swish 2s infinite;
+    will-change: transform;
+}
+
+@keyframes swish {
+    0% { rotate: 25deg; }
+    50% { rotate: -25deg; }
+    100% { rotate: 25deg; }
 }
